@@ -229,10 +229,10 @@ DataManager::ReadControl(MBDynParser& HP,
 
 		OUTPUTRESULTS,
 		DEFAULTOUTPUT,
-		ALL,
-		NONE,
-		REFERENCEFRAMES,
-		ACCELERATIONS,
+			ALL,
+			NONE,
+			REFERENCEFRAMES,
+			ACCELERATIONS,
 
 		DEFAULTORIENTATION,
 		DEFAULTBEAMOUTPUT,
