@@ -616,6 +616,21 @@ extern OutputHandler OutHdl;
 const flag fDefaultOut = 1;
 
 class ToBeOutput {
+public:
+	enum {
+		OUTPUT = 0x1U,
+
+		// use OUTPUT_MASK to isolate public output flags
+		OUTPUT_MASK = 0xFU,
+
+		// reserve values up to OUTPUT_PRIVATE for public use;
+		// reserved output flags can start from OUTPUT_PRIVATE up
+		OUTPUT_PRIVATE = 0x10U,
+
+		// use OUTPUT_PRIVATE_MASK to isolate private output flags
+		OUTPUT_PRIVATE_MASK = ~OUTPUT_MASK
+	};
+
 protected:
 	flag fOutput;
 
